@@ -1,3 +1,8 @@
+2006-01-24  Gautier Portet <kassoulet gmail com>
+
+	* Makefile: Fixed build on Gentoo. And corrected a typo causing pl and
+	  pt to be not installed
+
 2006-01-21  Gautier Portet <kassoulet gmail com>
 
 	Release 0.8.3
